--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 clap = "2"
-sleighcraft = { git = "https://github.com/StarCrossPortal/sleighcraft" }
+sleighcraft = { path = "../sleighcraft/sleighcraft" }
+#git = "https://github.com/StarCrossPortal/sleighcraft" }
 log = { version = "0.4", features = ["std"] }
 simplelog = "^0.10.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
